# LVK-LearningAndPractice

./: CMakeLists.txt
shaders/00-Setup/: main.frag  main.vert
shaders/00-Triangle/: main.vert
shaders/02-Model/: main.frag  main.vert
shaders/03-ImGui/: common.sp  main.frag  main.vert  main_v2.frag  main_v2.vert  skybox.frag
src/00-Setup/: CMakeLists.txt
src/00-Setup/src/: setup.cpp
src/01-Triangle/: CMakeLists.txt
src/01-Triangle/src/: triangle.cpp
src/02-Model/: CMakeLists.txt
src/02-Model/src/: model.cpp
src/03-Imgui/: CMakeLists.txt  imgui.cpp
src/03-Imgui/src/: Bitmap.h  UtilsCubemap.cpp  UtilsCubemap.h  UtilsMath.h  cubemap.h  fps.h  imgui_chap.h  main.cpp
src/Shared/: model_loader.h  shader_processor.h
